<resources>
    <string name="app_name">Guitar_Music_App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="osobní_informace">Osobní informace</string>
    <string name="lekce">Lekce</string>
    <string name="statistiky">Statistiky</string>
    <string name="rytmus">Rytmus</string>
    <string name="akordy">Akordy</string>
    <string name="vyberte_lekci">Vyberte lekci</string>
    <string name="v_sledky">Výsledky</string>
    <string name="registrace">Registrace</string>
    <string name="emailov_adresa">Emailová adresa</string>
    <string name="opakujte_heslo">Opakujte heslo</string>
    <string name="vlo_te_heslo">Vložte heslo</string>
    <string name="zapomenut_heslo">Zapomenuté heslo</string>
    <string name="odeslat_heslo">Odeslat heslo</string>
    <string name="ulo_it_informace">Uložit informace</string>
    <string name="p_ezd_vka">Přezdívka</string>
    <string name="v_k">Věk</string>
    <string name="pohlav">Pohlaví</string>
    <string name="personal_info">Osobní informace</string>
    <string name="results">Výsledky</string>
    <string name="homepage">Úvodní strana</string>
    <string name="comparison">Nejvyšší výsledek</string>
    <string name="last_game_results">Výsledky cvičení</string>
    <string name="statistics">Statistiky</string>
    <string name="recent_games">Poslední cvičení</string>
    <string name="best_results">Nejlepší výsledky</string>
    <string name="additional_statistics">Další statistiky</string>
    <string name="asistent">Asistent</string>
    <string name="turn_off_asistant">Zapnout asistent</string>
    <string name="turn_on_asisstant">Vypnout asistent</string>
    <string name="notes">Noty</string>
    <string name="rythm">Rytmus</string>
    <string name="btn_back">btn_back</string>
    <string name="noty">Noty</string>
    <string name="rules">Pravidla</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="correct">Správně</string>
    <string name="information">MUSEAPP je aplikace, která slouží k výuce hry na kytaru a obsahuje všechny prvky nutné
        k ovládnutí základů hry. Skládá se ze tří cvičení, jejichž popis je k nalezení v sekci "lekce" -> "pravidla". Těmi jsou noty, akordy a rytmus.
    Každá odehraná lekce je bodově ohodnocena a výsledné skóre lze vidět v sekci "statistika". </string>
    <string name = "exit_confirmation"> Opuštěním cvičení příjdete o výsledek. Doopravdy chcete cvičení opustit?</string>
    <string name="notes_text">Lekce noty je jednoduchým cvičením na vybrnkávání při hře na kytaru.
        Jedná se o cvičení, které lze cvičit jak levou tak pravou rukou. Správně držení zařízení by mělo být obrazovkou směrem od uživatele.
        Jestliže bude užívána pravá ruka, lze použít všechny prsty a k přidržení zařízení by měla sloužit levá ruka.
        Jestliže bude použita ruka levá, cvičení by mělo být ovládano všemi prsty bez palce, který by měl sloužit k přidržení zařízení.
    Cílem cvičení je správně označit šedé pole, které symbolizuje pozici na kytaře. Po jejím úspěšném zmáčknutí je pole označeno zelenou barvou a šedé pole se objeví na ploše jinde.
    Jestliže je pole označeno žlutou barvou, jedná se o chybné označení pole.</string>

    <string name="chords_text">Lekce akordy je cvičení, které slouží k výuce základních akordů.
        Cvičení by mělo být používáno výhradně levou rukou a zařízení by mělo být směrem od uživatele.
        Ke správnému užívání tohoto cvičení by měly být použity všechny prsty levé ruky, krom palce, který slouží k přidržení telefonu.
    Účelem cvičení je správně zahrát na "virtuální kytaře" daný akord.
        Jestliže je uživatel uplný začátečník, může si zároveň zapnout asistenta, který bude ukazovat, jak daný akord zahrát.
    Jakmile se uživatel správně zahraje akord, jeho pozice se označí zelenou barvou,zařízení zavibruje a bude zobrazen další zahraný akord.
        V opačném případě budou pozice na kytaře označeny pouze žlutou barvou.</string>

    <string name="rhythm_text">Lekce Rytmus je cvičení založené na držení rytmu v pravé ruce.
        Cvičení by mělo být tedy využívano pouze pravou rukou (nejlépe vrchní částí ukazováčku) a levá by měla sloužit k přidržení zařízení.
    Účelem cvičení je správně zahrát kombinaci šipek, která je vyznačena v horní části obrazovky. Šipky lze zahrát přejetím prstem ze shora dolů (obrazovka zmodrá) nebo ze spoda nahoru (obrazovka zezelená).
    Jestliže pohyb odpovídá šipce, označí se zelenou barvou a uživatel může zahrát další šipku. Jestliže je provedena chyba, šipka a všechny předchozí šipky jsou označeny červenou barvou
    a uživatel začíná hrát kombinaci znova. Hraný rytmus lze dle libosti změnit.</string>
</resources>