<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personal_information_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_loop"
    tools:context="com.example.guitar_music_app.results.ResultActivity">


    <ImageView
        android:id="@+id/img_guitar"
        android:layout_width="72dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/papapishu_guitar_2" />

    <Button
        android:id="@+id/btn_change_info"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/ulo_it_informace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_psw_repeat"/>

    <ImageButton
        android:id="@+id/btn_back"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <EditText
        android:id="@+id/et_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/vlo_te_heslo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/et_psw_repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

    <EditText
        android:id="@+id/et_psw_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/opakujte_heslo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_change_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_psw" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/emailov_adresa"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/et_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_personal_info" />

    <TextView
        android:id="@+id/lbl_personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/img_guitar" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/p_ezd_vka"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/et_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:text="@string/v_k"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/gender_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="210dp"
        android:layout_height="41dp"
        android:background="#FFFFFF"
        android:spinnerMode="dropdown"
        android:text="@string/pohlav"
        app:layout_constraintBottom_toTopOf="@+id/et_psw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_age" />


</androidx.constraintlayout.widget.ConstraintLayout>